.provarCaches/00D6C0000000xA6UAI/objects/sked__Polling_Change_Event__c.object
<CustomObject>
    <fields>
        <fullName>sked__Changed_Data__c</fullName>
        <label>Changed Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Operation__c</fullName>
        <label>Operation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Table__c</fullName>
        <label>Table</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Polling Change Event</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Polling Change Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Polling Change Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>